[package]
name = "vehicle-controller"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
defmt = { version = "0.3.5", features = ["encoding-rzcobs"] }
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
fdcan = { version = "0.2.0", features = ["fdcan_h7"] }
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
stm32h7xx-hal = { version = "0.16.0", features = [
    "stm32h747cm7",
    "can",
    "rtc",
    "defmt",
] }
rtic-monotonics = { version = "1.4.1", features = [
    "cortex-m-systick",
    "systick-64bit",
    "systick-10khz",
] }
crc = "3.0"
zerocopy = "0.6"
byteorder = { version = "1.4", default-features = false }
wurth-telesto = { git = "https://github.com/team-arrow-racing/wurth-telesto.git", version = "0.1.0", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }

[[bin]]
name = "vehicle-controller"
test = false
bench = false
harness = false
